Add unit and integration tests, fix bugs.